# spook

./: LICENSE  README.md  pyproject.toml
scripts/: listener.py  reverse_shell.py
spook/: __main__.py  candy.py  modes.py  ports.py
spook/cmd/: recon.py  scripts.py
