[project]
name = "spook"
version = "0.1.0-alpha"
description = "Red-teaming toolkit"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "typer>=0.9.0",
]

[project.scripts]
spook = "spook.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spook"]
